--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Walker Davis",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.5",
     "discord.js": "^14.7.1",
     "node-fetch": "^3.3.1"
   },
