--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,13 @@
 name: Deploy to Ubuntu Server
 
 on:
-  workflow_run:
-    workflows: ["Node.js Test"]
+  push:
     branches:
       - main
-    types:
-      - completed
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
