--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Deploy to Ubuntu Server
+      - name: Clone code to Ubuntu Server
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -21,6 +21,19 @@ jobs:
           script: |
             cd bungie-bot
             git pull origin main
+            
+      - name: Copy Secret config
+        run: |
+          cat ${{ secrets.SECRET_CONFIG }} > config.json
+          scp -i ${{ secrets.SSH_PRIVATE_KEY }} config.json ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:~/bungie-bot/
+            
+      - name: Rebuild Docker Container and Start
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
             docker stop bungie-bot || true
             docker rm bungie-bot || true
             docker build -t bungie-bot .
