--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
             
       - name: Copy Secret config
         run: |
-          cat ${{ secrets.SECRET_CONFIG }} > config.json
+          echo "${{ secrets.SECRET_CONFIG }}" > config.json
           scp -i ${{ secrets.SSH_PRIVATE_KEY }} config.json ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:~/bungie-bot/
             
       - name: Rebuild Docker Container and Start
