--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Copy Secret config
         run: |
           echo "${{ secrets.SECRET_CONFIG }}" > config.json
-          cat config.json
-          scp -i ${{ secrets.SSH_PRIVATE_KEY }} config.json ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:~/bungie-bot/
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > key
+          scp -i key config.json ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:~/bungie-bot/
             
       - name: Rebuild Docker Container and Start
         uses: appleboy/ssh-action@master
