--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-fetch": "^3.3.1"
   },
   "devDependencies": {
-    "eslint": "^8.45.0"
+    "eslint": "^8.45.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
