--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,10 @@
 name: Deploy to Ubuntu Server
 
-on:
-  [push, workflow_dispatch]:
+on: 
+  push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   deploy:
